--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/images/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 dark" />
     <title>Mokbel Landing Page</title>
   </head>
-  <body class="font-inter antialiased bg-purple-900 text-gray-200 tracking-tight">
+  <body class="font-inter antialiased bg-gray-800 text-gray-200 tracking-tight">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
